hook images to tina, add interaction with hover states on markers/list

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "tinacms build && vite build && vite preview",
     "lint": "eslint .",
     "preview": "vite preview",
-    "predeploy": "npm run build",
+    "predeploy": "tinacms build && npm run build",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
