--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@fontsource/rammetto-one": "^5.1.0",
+    "@radix-ui/react-slider": "^1.2.1",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "react": "^18.3.1",
