--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@fontsource/rammetto-one": "^5.1.0",
+    "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-slider": "^1.2.1",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
