--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@fontsource-variable/vollkorn": "^5.1.1",
     "@fontsource/rammetto-one": "^5.1.0",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-slider": "^1.2.1",
@@ -43,6 +44,7 @@
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "tailwindcss": "^3.4.14",
-    "vite": "^5.4.10"
+    "vite": "^5.4.10",
+    "vite-plugin-svgr": "^4.3.0"
   }
 }
