--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fontsource/rammetto-one": "^5.1.0",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-slider": "^1.2.1",
+    "jotai": "^2.10.2",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "react": "^18.3.1",
