--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "front-matter": "^4.0.2",
     "gh-pages": "^6.2.0",
     "globals": "^15.11.0",
+    "imagemin": "^9.0.0",
+    "imagemin-webp": "^8.0.0",
     "js-yaml": "^4.1.0",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
