--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "tinacms build && npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "backfill": "node scripts/backfillBands.js",
+    "imgbands": "node scripts/optimizeImages.js ./public/img/bands 80",
+    "imgfests": "node scripts/optimizeImages.js ./public/img/festivals 100"
   },
   "dependencies": {
     "@fontsource-variable/vollkorn": "^5.1.1",
