--- a/package.json
+++ b/package.json
@@ -23,16 +23,18 @@
     "jotai": "^2.10.2",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
+    "maplibre-gl": "^5.1.0",
     "motion": "^11.11.17",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
-    "tinacms": "^2.4.0",
+    "react-map-gl": "^8.0.1",
+    "tinacms": "^2.6.4",
     "wouter": "^3.3.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
-    "@tinacms/cli": "^1.6.11",
+    "@tinacms/cli": "^1.8.4",
     "@types/node": "^22.9.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
